tests/NormalTests/paczka1/fuzzy1/73307263.err
Error in line 2: c99D3jG A401 59,6
Error in line 1: CMiew S251 99,3
Error in line 31: p3S1 A184 66,1
Error in line 26: c99D3jG A401 42,0
Error in line 33: c99D3jG S251 68,6
